--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
           package="cerbrendus.tasklist">
 
     <application
@@ -21,11 +20,16 @@
         </activity>
         <activity
                 android:name=".EditTaskItem.EditTaskActivity"
-                android:label="Add New Task"
+                android:label="Edit Task"
                 android:parentActivityName=".Main.MainActivity"
                 android:theme="@style/AppThemeNoBar">
         </activity>
         <activity android:name=".EditGroup.CreateGroupActivity">
+        </activity>
+        <activity
+                android:name=".EditSublist.EditSublistActivity"
+                android:parentActivityName=".Main.MainActivity"
+                android:theme="@style/AppThemeNoBar">
         </activity>
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
