--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation "androidx.room:room-coroutines:$room_version"
 
     //for admob
     implementation 'com.google.android.gms:play-services-ads:17.1.3'
