--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0-alpha03"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M2'
 
     // Architecture component
     //lifecycle
