--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Cleared.ClearedActivity">
+        <activity android:name=".Cleared.ClearedActivity"
+                  android:label="@string/cleared_title">
         </activity>
         <activity android:name=".Main.MainActivity">
             <intent-filter>
