--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Cleared.ClearedActivity"
+        <activity android:name=".Cleared.ClearedActivity" android:launchMode="singleTask"
                   android:label="@string/cleared_title">
         </activity>
-        <activity android:name=".Main.MainActivity">
+        <activity android:name=".Main.MainActivity" android:launchMode="singleTask">
             <intent-filter>
                 <action
                         android:name="android.intent.action.MAIN"
